src/static/css/style.css
@import url(fonts.css);

body {
    font-family: "Concert One", serif;
    margin: 0;
    padding: 0;
    color: oklch(10% 0 0);
    background-color: oklch(98% 0 0);
}
  
body::selection {
    background-color: oklch(47% 0.2 263);
}
   
header,
footer,
form {
    max-width: 1000px;
    margin: 0 auto;
    box-sizing: border-box; 
}
   
header,
footer {
    padding: 0px 5px;
}
   
header {
    font-family: "Bagnard Sans", sans-serif;
}

span.websiteName {
    color: oklch(20% 0.1 263);
}

span.beta {
    font-family: "Concert One", serif;
}

form {
    padding: 5px 20px;
}

label,
button {
    display: block;
    font-size: 1.1em;
}
  
label {
    margin-bottom: 5px;
}

input,
textarea {
    width: 100%;
    padding: 10px;
    margin-bottom: 10px;
    color: oklch(0% 0 0);
    background-color: oklch(100% 0 0);
    border: 2px solid oklch(96% 0.2 110);
    border-radius: 10px;
    box-sizing: border-box;
    font: inherit;
}
  
input:focus,
textarea:focus {
    outline-color: oklch(47% 0.2 263);
    background-color: oklch(96% 0.2 110);
}
  
textarea {
    resize: vertical;
    height: 45vh;
}

button {
    margin-top: 20px;
}

footer {
    font-size: 0.85em;
}

a:link,
a:visited {
    color: oklch(47% 0.2 263);
    text-decoration: none;
}

a:focus,
a:hover {
    text-decoration: underline;
}

